-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 10
-
Component/s: client-libs
-
b31
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8220158 | openjdk8u212 | Philip Race | P3 | Resolved | Fixed | b01 |
| JDK-8215804 | 8u212 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8214047 | 8u211 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8220831 | emb-8u211 | Alexey Ivanov | P3 | Resolved | Fixed | master |
| JDK-8255618 | 7u301 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8256123 | 7u291 | Alexey Ivanov | P3 | Resolved | Fixed | b05 |
since the build environments of the day did not have this header.
Now all JDK supported platforms have the header+library so we can
just use platform support like we do for most about everything else.
This may cause a glitch for some ports if there is no fontconfig configured
by default there (AIX ?), which is something that will need to be addressed
by the maintainers of that port.
- backported by
-
JDK-8214047 Remove fontconfig header files from JDK source tree
-
- Resolved
-
-
JDK-8215804 Remove fontconfig header files from JDK source tree
-
- Resolved
-
-
JDK-8220158 Remove fontconfig header files from JDK source tree
-
- Resolved
-
-
JDK-8220831 Remove fontconfig header files from JDK source tree
-
- Resolved
-
-
JDK-8255618 Remove fontconfig header files from JDK source tree
-
- Resolved
-
-
JDK-8256123 Remove fontconfig header files from JDK source tree
-
- Resolved
-
- is blocked by
-
JDK-8189119 Devkit for Linux needs to include fontconfig-devel
-
- Resolved
-