8170681: Remove fontconfig header files from JDK source tree

Reviewed-by: serb, erikj